<resources>
    <string name="app_name">HADIR</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_login">"LOGIN"</string>
    <string name="text_forgot_password">"Forgot your Password?"</string>
    <string name="text_register_an_account">"Register an account"</string>
    <string name="hello_there">"Hello There!"</string>
    <string name="text_sub_login">"An attendance Project with RFID"</string>
    <string name="tips_register">"If you don't have account to Login"</string>
    <string name="text_already_have_an_account">"Already have an Account"</string>
    <string name="create_an_account">"Create an account"</string>
    <string name="text_login_here">"Login Here"</string>
    <string name="text_register">"REGISTER"</string>
    <string name="text_statistic">Statistics</string>
    <string name="text_team">Team</string>
    <string name="name_about_us">Fakhri Maulana Falah</string>
    <string name="email_about_us">fakhrimf@gmail.com</string>
    <string name="kehadiran_statistic">Kehadiran</string>
    <string name="kehadiran_statistic_angka">80</string>
    <string name="kehadiran_izin">Izin</string>
    <string name="kehadiran_izin_angka">5</string>
    <string name="kehadiran_sakit">Sakit</string>
    <string name="kehadiran_sakit_angka">2</string>
    <string name="dot">dot</string>
    <string name="nip_guru">NIP</string>
    <string name="detail_nip_guru">171811710014</string>
    <string name="name_guru">John Doe</string>
    <string name="aktif_guru">AKTIF</string>
    <string name="hadir_guru">Hadir</string>
    <string name="information_detail_teacher">Information Detail Teacher</string>
    <string name="alamat_guru">Jl. Kliningan No. 6</string>
    <string name="no_guru">Nomor HP</string>
    <string name="detail_no_guru">081234182911</string>
    <string name="email_guru">Email</string>
    <string name="detail_email_guru">fakhri2020@gmail.com</string>
    <string name="alamat">Alamat</string>
    <string name="persentage_statistic">100%</string>
    <string name="data_statistic">Data Statistic</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="arrive">Jam Datang</string>
    <string name="go_home">Jam Pulang</string>
    <string name="default_time">--:--:--</string>
    <string name="default_arrive_time">--:--:--</string>
    <string name="default_go_home_time">--:--:--</string>
    <string name="default_name">Name</string>
    <string name="login_with_google">Login With Google</string>
    <string name="email">Email / Username</string>
    <string name="other">Other</string>
    <string name="logo_hadir">Logo Hadir</string>
    <string name="text_statistik">Statistik</string>
    <string name="text_profile">Profile</string>
    <string name="login_with">OR LOGIN WITH</string>
    <string name="please_contact">Please Contact an Administrator</string>
    <string name="drawer_logout">Logout</string>
    <string name="auto_login">Performing auto login…</string>
    <string name="session_expired">Session Expired, please login manually</string>
    <string name="logging_in">Logging you in…</string>
    <string name="username_password_error">Username / Password did not match.</string>
    <string name="insert_grnrs">Insert GRNRS</string>
    <string name="grnrs">GRNRS</string>
    <string name="find_grnrs">FIND GRNRS</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="grnrs_error">GRNRS must not be empty</string>
    <string name="no_grnrs_found">No GRNRS found</string>
    <string name="select_image">Select Image</string>
    <string name="please_wait">Please Wait…</string>
    <string name="success_add">Successfully added!</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="dp_empty">Please insert display picture</string>
    <string name="remember_me">Remember Me</string>
    <string name="timed_out">Connection Timed Out</string>
    <string name="internal_error">Internal Server Error, try again later</string>
</resources>
